--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,26 @@
 {
-  "name": "Vibe Extension",
+  "name": "Learnly",
   "description": "Good vibes in Chrome.",
   "version": "1.0",
   "manifest_version": 3,
   "action": {
     "default_popup": "dist/index.html",
-    "default_icon": "icon.png"
+    "default_icon": "images/icon.png"
   },
   "icons": {
-    "16": "icon.png",
-    "48": "icon.png",
-    "128": "icon.png"
-  }
+    "16": "images/icon.png",
+    "48": "images/icon.png",
+    "128": "images/icon.png"
+  },
+  "background": {
+    "service_worker": "dist/service-worker.js",
+    "type": "module"
+  },
+  "content_scripts": [
+    {
+      "js": ["dist/content.js"],
+      "matches": ["<all_urls>"]
+    }
+  ],
+  "permissions": ["tabs", "storage", "contextMenus"]
 }
