--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
   "version": "1.0",
   "manifest_version": 3,
   "action": {
-    "default_popup": "dist/ui/index.html",
+    "default_popup": "dist/ui/popup.html",
     "default_icon": "images/icon.png"
   },
   "side_panel": {
